# dev-cli

./: .gitignore  Claude.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml  release.yml  test.yml
cli/: .env.example
cli/src/dev_cli/: version.py
cli/src/dev_cli/aws_cli/: cache.py  command_classifier.py
cli/src/dev_cli/commands/: analyze.py  chat.py
cli/src/dev_cli/context/: file_writer.py
cli/tests/: conftest.py
cli/tests/unit/: test_llm_client.py
dev_cli/: __init__.py  __main__.py
dev_cli/aws_cli/: manager.py
dev_cli/context/: file_reader.py
dev_cli/detectors/: nodejs.py
dev_cli/git_cli/: command_classifier.py
dev_cli/prompts/: sql.py
scripts/: release.py
src/dev_cli/: __init__.py  __main__.py  config.py  main.py  version.py
src/dev_cli/aws_cli/: cache.py  command_classifier.py  intent_detector.py  manager.py  profile_detector.py
src/dev_cli/commands/: analyze.py  chat.py  context.py  init.py  status.py
src/dev_cli/context/: file_ops.py  file_reader.py  file_writer.py
src/dev_cli/detectors/: detector.py  nodejs.py  python.py  terraform.py
src/dev_cli/git_cli/: command_classifier.py  intent_detector.py  manager.py
src/dev_cli/llm/: client.py  streaming.py
src/dev_cli/prompts/: base.py  terraform.py
src/dev_cli/shell/: runner.py  task_detector.py
src/dev_cli/storage/: conversation.py  manifest.py  models.py  schema.py
tests/unit/: test_aws_cli.py  test_context.py  test_detectors.py  test_git_cli.py  test_llm_client.py  test_shell.py  test_storage.py
(+17 files in other folders)
