[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dev-cli"
version = "0.2.4"
description = "Interactive AI developer assistant — works with any OpenAI-compatible LLM"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.30.0",           # OpenAI-compatible client (works with any compatible API)
    "aiosqlite>=0.20.0",
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",            # httpx request mocking (replaces moto for OpenAI-compat tests)
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.scripts]
dev-cli = "dev_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dev_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
